--- a/index.html
+++ b/index.html
@@ -1,78 +1,138 @@
 <html>
     <head>
         <title>Case Study Between Google Lens And MobileNet</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Tera&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <ol>
-            <div class="text_image_and_results col-lg-6 col-md-6 col-sm-6 col-xs-12">
+        <div class="container">
+            <h4 style="text-align: center;font-family: 'Lexend Tera' , sans-serif;">
+                <span>CASE STUDY BETWEEN GOOGLE LENS AND MOBILENET</span>
+                <br><br>
+                GOOGLE LENS <img src="gl.jpg" style="width: 150px;">
+                <p>
+                    <b style="color: red;">VS</b>
+                </p>
+                <br>
+                <p class="btn btn-primary" style="font-size: 20px;">MOBILENET</p>
+            </h4>
 
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="glass.jpg" class="img-responsive">
-                </li>
+            <hr>
+            <ol style="padding: 0px;">
+                <div class="bob col-xs-12">
 
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="bottle.jpg" class="img-responsive">
-                </li>
+                    <li class="col-sm-4 col-xs-12">
+                        <b style="color: white;">Test Image - </b><img src="bottle.jpg" class="img-responsive">
+                    </li>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> GOOGLE LENS-</b>
+                        <span>Water Bottle</span>
+                    </h5>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> Mobilenet Model-</b>
+                        <span>Water Bottle</span>
+                    </h5>
 
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="fan.jpg" class="img-responsive">
-                </li>
-
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="shirt.jpg" class="img-responsive">
-                </li>
-
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="shoes.jpg" class="img-responsive">
-                </li>
-
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="switchboard.jpg" class="img-responsive">
-                </li>
-
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="pillow.jpg" class="img-responsive">
-                </li>
-
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="bed.jpg" class="img-responsive">
-                </li>
-
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="bag.jpg" class="img-responsive">
-                </li>
-
-                <li class="col-sm-4 col-xs-12">
-                    <b>Test Image-</b>
-                    <img src="air-conditioner.jpg" class="img-responsive">
-                </li>
-
-                <h5 class="col-sm-4 col-xs-12">
-                    Output on <b>GOOGLE LENS</b>
-                    <span></span>
-                </h5>
-
-                <h5 class="col-sm-4 col-xs-12">
-                    Output on <b>MobileNet Model</b>
-                    <span></span>
-                </h5>
-
-                <div class="col-xs-12 mini_result">
-                    <h4>Result-</h4>
-                    <hr>
-                    <h4></h4>
+                    <div class="bob3 col-xs-12">
+                        <h4>Result - </h4>
+                        <hr>
+                        <h4>Draw</h4>
+                    </div>
                 </div>
-            </div>
-        </ol>
+                <br>
+
+                <div class="bob col-xs-12">
+
+                    <li class="col-sm-4 col-xs-12">
+                        <b style="color: white;">Test Image - </b><img src="shoes.jpg" class="img-responsive">
+                    </li>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> GOOGLE LENS-</b>
+                        <span>Canvas Shoes</span>
+                    </h5>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> Mobilenet Model-</b>
+                        <span>Running Shoes</span>
+                    </h5>
+
+                    <div class="bob3 col-xs-12">
+                        <h4>Result - </h4>
+                        <hr>
+                        <h4>GOOGLE LENS Is More Accurate</h4>
+                    </div>
+                </div>
+                <br>
+
+                <div class="bob col-xs-12">
+
+                    <li class="col-sm-4 col-xs-12">
+                        <b style="color: white;">Test Image - </b><img src="pillow.jpg" class="img-responsive">
+                    </li>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> GOOGLE LENS-</b>
+                        <span>Pillow</span>
+                    </h5>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> Mobilenet Model-</b>
+                        <span>Blanket</span>
+                    </h5>
+
+                    <div class="bob3 col-xs-12">
+                        <h4>Result - </h4>
+                        <hr>
+                        <h4>GOOGLE LENS Is More Accurate</h4>
+                    </div>
+                </div>
+                <br>
+
+                <div class="bob col-xs-12">
+
+                    <li class="col-sm-4 col-xs-12">
+                        <b style="color: white;">Test Image - </b><img src="glass.jpg" class="img-responsive">
+                    </li>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> GOOGLE LENS-</b>
+                        <span>Glass</span>
+                    </h5>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> Mobilenet Model-</b>
+                        <span>Tumbler</span>
+                    </h5>
+
+                    <div class="bob3 col-xs-12">
+                        <h4>Result - </h4>
+                        <hr>
+                        <h4>GOOGLE LENS Is More Accurate</h4>
+                    </div>
+                </div>
+                <br>
+
+                <div class="bob col-xs-12">
+
+                    <li class="col-sm-4 col-xs-12">
+                        <b style="color: white;">Test Image - </b><img src="fan.jpg" class="img-responsive">
+                    </li>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> GOOGLE LENS-</b>
+                        <span>Fan</span>
+                    </h5>
+                    <h5 class="col-sm-4 col-xs-12">Output on<b> Mobilenet Model-</b>
+                        <span>Fan</span>
+                    </h5>
+
+                    <div class="bob3 col-xs-12">
+                        <h4>Result - </h4>
+                        <hr>
+                        <h4>Draw</h4>
+                    </div>
+                </div>
+                <br>
+            </ol>
+            <br><br>
+            <h4 class="col-xs-12 result">
+                I have tested 5 images<br>
+                <b>GOOGLE LENS</b> has predicted 3 of them more accurately. And <b>MOBILENET</b> was less accurate<br>
+                So according to my case study <b>GOOGLE LENS</b> Is More Accurate</h4>
+        </div>
+        <br><br>
+        <div class="copy_right_footer">
+            Made by-Pallav Mukerjee
+        </div>
     </body>
 </html>
